--- a/multiChampRotation/index.html
+++ b/multiChampRotation/index.html
@@ -30,33 +30,6 @@
 				text-align: center;
 			}
 
-			/* bounce animation for model? */
-			@keyframes bounce {
-			  from, 20%, 53%, 80%, to {
-			    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-			    transform: translate3d(0,0,0);
-			  }
-
-			  40%, 43% {
-			    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-			    transform: translate3d(0, -30px, 0);
-			  }
-
-			  70% {
-			    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-			    transform: translate3d(0, -15px, 0);
-			  }
-
-			  90% {
-			    transform: translate3d(0,-4px,0);
-			  }
-			}
-
-			.bounce {
-			  animation-name: bounce;
-			  transform-origin: center bottom;
-			}
-
 		</style>
 	</head>
 	<body>
@@ -72,10 +45,11 @@
 		<script src="js/Detector.js"></script>
 		<script src="js/libs/stats.min.js"></script>
 
-		<script>// id="bounce">
+		<script>
 			if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var container, stats;
 			var camera, cameraTarget, scene, renderer;
+			// cameraTarget, container
 			init();
 			animate();
 			function init() {
