--- a/singleChampRotation/index.html
+++ b/singleChampRotation/index.html
@@ -12,33 +12,6 @@
                 overflow: hidden;
             }
 
-            @keyframes bounce {
-              from, 20%, 53%, 80%, to {
-                animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-                transform: translate3d(0,0,0);
-              }
-
-              40%, 43% {
-                animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-                transform: translate3d(0, -30px, 0);
-              }
-
-              70% {
-                animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-                transform: translate3d(0, -15px, 0);
-              }
-
-              90% {
-                transform: translate3d(0,-4px,0);
-              }
-            }
-
-            .bounce {
-              animation-name: bounce;
-              transform-origin: center bottom;
-            }
-
-
         </style>
     </head>
     <body>
@@ -49,6 +22,8 @@
 
             var camera, scene, renderer,
             geometry, material, mesh, light1, stats;
+
+            // geometry, material, mesh, light1
 
             var targetRotation = 0;
             var targetRotationOnMouseDown = 0;
@@ -291,13 +266,14 @@
                 
                 //xhr.open( "GET", 'Octocat-v1.stl', true );
                 xhr.open( "GET", 'Ryze.stl', true );
+                //xhr.open( "GET", 'Ahri.stl', true );
                 xhr.responseType = "arraybuffer";
                 //xhr.setRequestHeader("Accept","text/plain");
                 //xhr.setRequestHeader("Content-Type","text/plain");
                 //xhr.setRequestHeader('charset', 'x-user-defined');
                 xhr.send( null );
 
-                renderer = new THREE.WebGLRenderer(); //new THREE.CanvasRenderer();
+                renderer = new THREE.WebGLRenderer();
                 renderer.setSize( window.innerWidth, window.innerHeight );
 
                 document.body.appendChild( renderer.domElement );
