set up gulp server

--- a/singleChampRotation/index.html
+++ b/singleChampRotation/index.html
@@ -223,7 +223,7 @@
                 }
             };
 
-            
+            // TODO: load different champions via dropdown selection with load button
 
             init();
             animate();
